--- a/assets/scss/components/_globals.scss
+++ b/assets/scss/components/_globals.scss
@@ -67,15 +67,15 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     margin-top: 4rem;
     margin-bottom: 1.5rem;
-    line-height: 1.15rem;
+    line-height: 1.45em;
 }
 h1 {
     font-size: 2.5rem;
-    line-height: 2.9rem;
+    line-height: 1.25em;
 }
 h2 {
     font-size: 1.5rem;
-    line-height: 1.8rem;
+    line-height: 1.8em;
     font-weight: lighter;
     margin-bottom: .25rem;
 
